[tool.semantic_release]
version_variable = [
    "__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}",
]
major_on_zero = false
branch = "main"
upload_to_repository = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry]
name = "pvb"
version = "0.1.0"
description = "A tool for posting Terraform provider versions to Slack"
authors = ["Nick Hobart <nick@hobart.io>"]
packages = [
  { include = "main.py" },
]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
semver = "^2.13.0"
redis = "^4.5.4"
prettytable = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
